change Hux to Xiaoyang Wei

--- a/_config.yml
+++ b/_config.yml
@@ -1,22 +1,22 @@
 # Site settings
-title: Hux Blog
-SEOTitle: 黄玄的博客 | Hux Blog
+title: Xiaoyang Wei
+SEOTitle: 魏晓阳的博客 | Xiaoyang Wei Blog
 header-img: img/home-bg.jpg
-email: huxpro@gmail.com
-description: "关于前端与设计、黑客与画家 | 黄玄，Web & Mobile Lover，Front-End Engineer，UX Designer | 这里是 @Hux黄玄 的个人博客，与你一起发现更大的世界。"
-keyword: "黄玄, Hux黄玄, Hux, 鬼栈, huxpro, @huxpro, 黄玄的博客, Hux Blog, 博客, 个人网站, 互联网, 前端, 设计, 产品, 肖玉, Lynn, 肖玉的男朋友"
-url: "http://huangxuan.me"              # your host, for absolute URL
+email: weixiaoyang920@gmail.com
+description: "关于前端与设计、黑客与画家 | 魏晓阳，Web & Mobile Lover，Front-End Engineer，UX Designer | 这里是 @Xiaoyang Wei魏晓阳 的个人博客，与你一起发现更大的世界。"
+keyword: "魏晓阳, Xiaoyang Wei魏晓阳, Xiaoyang Wei, 魏晓阳的博客, Xiaoyang Wei Blog, 博客, 个人网站, 互联网, 前端, 设计, 产品, 武晓琳, 武晓琳的老公"
+url: "http://wxyweb.info"              # your host, for absolute URL
 baseurl: ""                             # for example, '/blog' if your blog hosted on 'host/blog'
 
 
 
 # SNS settings
 RSS: false
-weibo_username:     huxpro
-zhihu_username:     huxpro
-github_username:    huxpro
-#twitter_username:  huxpro
-facebook_username:  huxpro
+weibo_username:     Xiaoyang Wei
+zhihu_username:     Xiaoyang Wei
+github_username:    Xiaoyang Wei
+#twitter_username:  Xiaoyang Wei
+facebook_username:  Xiaoyang Wei
 # linkedin_username:  firstname-lastname-idxxxx
 
 
@@ -51,7 +51,7 @@ kramdown:
 #disqus_username: _your_disqus_short_name_
 
 # Duoshuo settings
-duoshuo_username: huxblog
+duoshuo_username: Xiaoyang Wei blog
 # Share component is depend on Comment so we can NOT use share only.
 duoshuo_share: true                     # set to false if you want to use Comment without Sharing
 
@@ -63,7 +63,7 @@ duoshuo_share: true                     # set to false if you want to use Commen
 ba_track_id: 4cc1f2d8f3067386cc5cdb626a202900
 # Google Analytics
 ga_track_id: 'UA-49627206-1'            # Format: UA-xxxxxx-xx
-ga_domain: huangxuan.me
+ga_domain: wxyweb.info
 
 
 
